# Maturaarbeit

./: CMakeLists.txt  calc.py  calculate_coordinates.cpp  calculate_coordinates.h  common_use_functions.cpp  common_use_functions.h  data_kraftmessplatte.txt  extern_variables.h  find_stretching_factor.cpp  ligament.cpp  ligament.h  main.cpp  muscle.cpp  muscle.h  todo.txt  tree.txt
c_code/classes/: ligament.cpp  ligament.h  muscle.cpp  muscle.h  save.cpp  save.h
c_code/dependency/: dependency.h
c_code/general_functions_and_variables/: calculate_coordinates.cpp  calculate_coordinates.h  common_use_functions.cpp  common_use_functions.h  extern_variables.h
c_code/model1/: model1.cpp  model1.h  run.cpp
c_code/unused_functions/: find_stretching_factor.cpp  find_stretching_factor.h
c_results/: Aponeurosis_plantaris.txt  Calcaneocuboideum_plantare.txt  Calcaneonaviculare_plantare.txt  F_Achillessehne.txt  F_N.txt  Flexor_digitorum_longus.txt  Flexor_hallucis_longus.txt  Peroneus.txt  Plantare_longum.txt  angle_mu.txt  angle_zeta.txt  mu_calculated.txt  zeta_calculated.txt
classes/: ligament.h  muscle.h
general_functions_and_variables/: common_use_functions.cpp  common_use_functions.h
model1/: model1.cpp  model1.h
py_results/: coords.txt  scale_in_pixel_per_centimeter.txt
unused_functions/: find_stretching_factor.cpp  find_stretching_factor.h
